--- a/mediaquery.css
+++ b/mediaquery.css
@@ -93,20 +93,19 @@
         display: block;
     }
     .nav-right{
-        /* display: none; */
         position: absolute;
         top: 0; 
         left: 0;
         width: 0;
         height: 0;
-        /* opacity: 0;  */
         overflow: hidden; 
     }
     .nav-right.active{
         /* opacity: 1; */
-        width: 100vw;   
-        height: 100vh;
+        width: 100vw;    
+        height: 100vh; 
         z-index: 1;
+        position: fixed;
         transition: .5s;  
         background-color: rgb(255, 255, 255);
         flex-direction: column;
